--- a/index.html
+++ b/index.html
@@ -27,20 +27,42 @@
             </div>
         </nav>
 
+        <div class="off-screen-menu">
+            <ul>
+                <li><a href="index.html">Home</a></li>
+                <li><a href="about.html">Services</a></li>
+                <li><a href="contact.html">Portfolio</a></li>
+                <li><a href="contact.html">About Us</a></li>
+                <li><a href="contact.html">Contact Us</a></li>
+            </ul>
+        </div>
+        <nav class="hamNav">
+            <div><h2>Pixel Perfect</h2></div>
+            <div class="ham-menu">
+                <span></span>
+                <span></span>
+                <span></span>
+            </div>
+        </nav>
+
         <div class="hero">
             <div class="heroText">
-                <h2>Empowering Your Digital Presence</h2>
-                <h2>Innovative Solutions for Your Online Success</h2>
+                <h2>Empowering <br><span>Your Digital Presence</span></h2>
+                <h2>Innovative Solutions for  <br><span>Your Online Success</span></h2>
             </div>
             <div class="heroButtons">
-                <button>Get Started</button>
-                <button>Contact Us</button>
+                <button id="heroBtn1">Get Started</button>
+                <button id="heroBtn2">Contact Us</button>
+            </div>
+            <div class="heroImg">
+                <img id="img1" src="Assets/desktop-work-1.png" alt="image">
+                <img id="img2" src="Assets/desktop-work-2.png" alt="image">
             </div>
         </div>
 
     </header>
     <div class="services">
-
+        
     </div>
     
     <div class="portfolio">
@@ -55,5 +77,13 @@
 
     </div>
 
+    <div class="links"> 
+
+    </div>
+
+    <div class="footer">
+
+    </div>
+    <script src="script.js"></script>
 </body>
 </html>
