--- a/index.html
+++ b/index.html
@@ -62,7 +62,58 @@
 
     </header>
     <div class="services">
-        
+        <div class="serviceWrapper">
+            <div class="serviceContainer">
+                <div class="box box1">
+                    <div class="serviceOffer">
+                        <h2>Web Design & Development</h2>
+                    </div>
+                    <div class="serviceDescription">
+                        <p>Our expert team specializes in creating visually stunning and user-friendly websites tailored to your brand and business goals. From custom website design to responsive development, we ensure that your online presence stands out from the competition.</p>
+                    </div>
+                    <div class="price">
+                        <h3>Starting Price: <span>$1500</span></h3>
+                    </div>
+                    <button class="check">I Want It</button>
+                </div>
+                <div class="box box2">
+                    <div class="serviceOffer">
+                        <h2>Graphic Design</h2>
+                    </div>
+                    <div class="serviceDescription">
+                        <p>Elevate your brand identity with our professional graphic design services. Whether you need a captivating logo, eye-catching marketing materials, or engaging visuals for your online presence, our talented designers will bring your vision to life with precision and creativity.</p>
+                    </div>
+                    <div class="price">
+                        <h3>Starting Price: <span>$500</span></h3>
+                    </div>
+                    <button class="check">I Want It</button>
+                </div>
+                <div class="box box3">
+                    <div class="serviceOffer">
+                        <h2>Digital Marketing</h2>
+                    </div>
+                    <div class="serviceDescription">
+                        <p>Drive traffic, leads, and conversions with our comprehensive digital marketing solutions. From search engine optimization (SEO) to social media marketing (SMM) and pay-per-click advertising (PPC), we employ data-driven strategies to maximize your online visibility and ROI.</p>
+                    </div>
+                    <div class="price">
+                        <h3>Starting Price: <span>$1000/month</span></h3>
+                    </div>
+                    <button class="check">I Want It</button>
+                </div>
+                <div class="box box4">
+                    <div class="serviceOffer">
+                        <h2>Content Creation</h2>
+                    </div>
+                    <div class="serviceDescription">
+                        <p>Engage your audience and tell your brand story effectively with our professional content creation services. Whether you need compelling website copy, informative blog posts, or captivating multimedia content, our team of writers and creators delivers quality content that resonates with your target audience.</p>
+                    </div>
+                    <div class="price">
+                        <h3>Starting Price: <span>$100 per page</span></h3>
+                    </div>
+                    <button class="check">I Want It</button>
+                </div>
+            </div>
+        </div>
     </div>
     
     <div class="portfolio">
