--- a/index.html
+++ b/index.html
@@ -63,54 +63,72 @@
     </header>
     <div class="services">
         <div class="serviceWrapper">
+                <span id="serviceHeader">Services</span>
             <div class="serviceContainer">
                 <div class="box box1">
                     <div class="serviceOffer">
-                        <h2>Web Design & Development</h2>
-                    </div>
-                    <div class="serviceDescription">
-                        <p>Our expert team specializes in creating visually stunning and user-friendly websites tailored to your brand and business goals. From custom website design to responsive development, we ensure that your online presence stands out from the competition.</p>
+                        <h2>Web Design <br>& Development</h2>
                     </div>
                     <div class="price">
-                        <h3>Starting Price: <span>$1500</span></h3>
+                        <h3>From </h3> <span>€1500</span>
                     </div>
                     <button class="check">I Want It</button>
+
+                    <div class="serviceDescription">
+                        <span><img src="Assets/check-circle.png" alt="check">Custom website design</span>
+                        <span><img src="Assets/check-circle.png" alt="check">Responsive development solutions</span>
+                        <span><img src="Assets/check-circle.png" alt="check">User-friendly interfaces</span>
+                        <span><img src="Assets/check-circle.png" alt="check">E-commerce website creation</span>
+                        <span><img src="Assets/check-circle.png" alt="check">Mobile optimization included</span>
+                    </div>
                 </div>
                 <div class="box box2">
                     <div class="serviceOffer">
-                        <h2>Graphic Design</h2>
-                    </div>
-                    <div class="serviceDescription">
-                        <p>Elevate your brand identity with our professional graphic design services. Whether you need a captivating logo, eye-catching marketing materials, or engaging visuals for your online presence, our talented designers will bring your vision to life with precision and creativity.</p>
+                        <h2>Graphic Design <br> <br> </h2>
                     </div>
                     <div class="price">
-                        <h3>Starting Price: <span>$500</span></h3>
+                        <h3>From </h3><span>€500</span>
                     </div>
                     <button class="check">I Want It</button>
+                    <div class="serviceDescription">
+                        <span><img src="Assets/check-circle.png" alt="check"> Unique logo creation</span>
+                        <span><img src="Assets/check-circle.png" alt="check">Marketing materials design</span>
+                        <span><img src="Assets/check-circle.png" alt="check">Social media graphics</span>
+                        <span><img src="Assets/check-circle.png" alt="check">Business branding packages</span>
+                        <span><img src="Assets/check-circle.png" alt="check">Custom illustrations provided</span>
+                    </div>
                 </div>
                 <div class="box box3">
                     <div class="serviceOffer">
-                        <h2>Digital Marketing</h2>
-                    </div>
-                    <div class="serviceDescription">
-                        <p>Drive traffic, leads, and conversions with our comprehensive digital marketing solutions. From search engine optimization (SEO) to social media marketing (SMM) and pay-per-click advertising (PPC), we employ data-driven strategies to maximize your online visibility and ROI.</p>
+                        <h2>Digital Marketing <br> <br> </h2>
                     </div>
                     <div class="price">
-                        <h3>Starting Price: <span>$1000/month</span></h3>
+                        <span>€1000 </span><h3> /month</h3>
                     </div>
                     <button class="check">I Want It</button>
+                    <div class="serviceDescription">
+                        <span><img src="Assets/check-circle.png" alt="check">SEO strategy implementation</span>
+                        <span><img src="Assets/check-circle.png" alt="check">Social media campaigns</span>
+                        <span><img src="Assets/check-circle.png" alt="check">PPC advertising management</span>
+                        <span><img src="Assets/check-circle.png" alt="check">Email marketing solutions</span>
+                        <span><img src="Assets/check-circle.png" alt="check">Content marketing plans</span>
+                    </div>
                 </div>
                 <div class="box box4">
                     <div class="serviceOffer">
-                        <h2>Content Creation</h2>
-                    </div>
-                    <div class="serviceDescription">
-                        <p>Engage your audience and tell your brand story effectively with our professional content creation services. Whether you need compelling website copy, informative blog posts, or captivating multimedia content, our team of writers and creators delivers quality content that resonates with your target audience.</p>
+                        <h2>Content Creation <br> <br> </h2>
                     </div>
                     <div class="price">
-                        <h3>Starting Price: <span>$100 per page</span></h3>
+                        <span>€100 </span> <h3> /page</h3>
                     </div>
                     <button class="check">I Want It</button>
+                    <div class="serviceDescription">
+                        <span><img src="Assets/check-circle.png" alt="check">Engaging website copy</span>
+                        <span><img src="Assets/check-circle.png" alt="check">Informative blog posts</span>
+                        <span><img src="Assets/check-circle.png" alt="check">Video production services</span>
+                        <span><img src="Assets/check-circle.png" alt="check">Professional photography sessions</span>
+                        <span><img src="Assets/check-circle.png" alt="check">Compelling multimedia content</span>
+                    </div>
                 </div>
             </div>
         </div>
