--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <header>
         <nav class="desktopNav">
             <div class="navLogo">
-                <h2>Pixel Perfect Solutions</h2>
+                <h2>PixelPerfect Solutions</h2>
             </div>
             <div class="navWrapper">
                 <ul>
@@ -37,7 +37,7 @@
             </ul>
         </div>
         <nav class="hamNav">
-            <div><h2>Pixel Perfect</h2></div>
+            <div><h2>PixelPerfect</h2></div>
             <div class="ham-menu">
                 <span></span>
                 <span></span>
@@ -146,7 +146,7 @@
                 <div class="aboutText">
                     <p>
                         At Pixel Perfect, we're not just a team; we're a family of passionate creators dedicated to delivering 
-                        excellence in every pixel. With a combined experience of over 4 years, we've honed our craft and perfected 
+                        excellence in every pixel. With a combined experience of over 10 years, we've honed our craft and perfected 
                         our approach to digital solutions. Our mission is simple: to empower businesses with pixel-perfect designs and strategies 
                         that elevate their online presence and drive success.
                     </p>
@@ -187,24 +187,25 @@
          
     </div>
     
-    <div class="testimonials">
+    <div class="testimonials hiddenFade">
         <div class="testiWrapper">
             <div class="testiContainer">
-                <div class="testiTitle"></div>
+                <div class="testiTitle"><p>But don't just take our word for it. Here's what our clients have to say about working with Pixel Perfect:</p></div>
                 <div class="testis">
                     <div class="test test1">
                         <div class="testContent">
-                            <div class="testImg"></div>
-                            <div class="testText"></div>
+                            <div class="testImg"><img src="Assets/John Doe.jpg" alt=""></div>
+                            <div class="testText"><p>"Pixel Perfect exceeded our expectations with their creativity, attention to detail, and professionalism. Highly recommended!"</p></div>
                         </div>
-                        <div class="testPerson"></div>
+                        <div class="testPerson"><h3>- John Doe, CEO of XYZ Company</h3></div>
                     </div>
                     <div class="test test2">
                         <div class="testContent">
-                            <div class="testImg"></div>
-                            <div class="testText"></div>
+                            <div class="testImg"><img src="Assets/Jane Smith.jpg" alt=""></div>
+                            <div class="testText"><p>"Working with Pixel Perfect was a breeze. They understood our vision and brought it to life with precision and flair."</p></div>
                         </div>
-                        <div class="testPerson"></div>
+                        <div class="testPerson"><h3>- Jane Smith, Marketing Manager at ABC Inc.
+                        </h3></div>
                     </div>
                 </div>
             </div>
@@ -224,7 +225,7 @@
     </div>
 
     <div class="footer">
-
+<!-- `       attribute for an image <a href="https://www.freepik.com/free-vector/site-template-messenger-online-chat_3266547.htm#page=15&query=digital%20agency%20isometric&position=6&from_view=keyword&track=ais_user_b&uuid=853f98e4-419d-45db-a7e2-77442ad66e01">Image by vectorpocket</a> on Freepik -->
     </div>
     <script src="script.js"></script>
 </body>
