--- a/index.html
+++ b/index.html
@@ -212,8 +212,70 @@
         </div>
     </div>
 
-    <div class="portfolio hidden">
-        
+    <div class="portfolio">
+        <div class="portfolioWrapper">
+            <h3>Here Is Some Of Our Work</h3>
+            <div class="portfolioContainer">
+                <div class="pbox hiddenLeft">
+                    <div class="portfolioImage"> <img src="Assets/mock-design-1-1.jpg" alt="Photo"></div>
+                    <div class="portfolioInfo">
+                        <p><span>Client: </span>Chic Boutique</p>
+                        <p><span>Industry: </span>Fashion Retail</p>
+                        <p><span>Services Provided: </span>Web Design & Development, E-Commerce Integration, SEO</p>
+                    </div>
+                    <div class="portfolioDescription">
+                        <p>We collaborated with Chic Boutique to create an elegant, user-friendly e-commerce platform that showcases their unique fashion collections. Our team designed a sleek, modern interface with seamless navigation and a robust e-commerce system to enhance user experience. The result was a significant increase in online sales and customer engagement, supported by optimized SEO strategies to drive traffic.</p>
+                    </div>
+                   <div class="buttonContainer">
+                    <button class="portButton">Check Me Out</button>
+                   </div>
+                </div>
+                <div class="pbox hiddenLeft">
+                    <div class="portfolioImage"> <img src="Assets/2.png" alt="Photo"></div>
+                    <div class="portfolioInfo">
+                        <p><span>Client: </span>GreenTech Innovations</p>
+                        <p><span>Industry: </span>Technology</p>
+                        <p><span>Services Provided: </span>Digital Marketing, Social Media Management, PPC Advertising</p>
+                    </div>
+                    <div class="portfolioDescription">
+                        <p>GreenTech Innovations partnered with us to launch a comprehensive digital marketing campaign aimed at increasing brand awareness and generating leads. We developed targeted social media strategies, managed PPC advertising, and created engaging content that highlighted their innovative products. The campaign resulted in a 40% increase in website traffic and a substantial boost in qualified leads.
+
+                        </p>
+                    </div>
+                    <div class="buttonContainer">
+                        <button class="portButton">Check Me Out</button>
+                       </div>
+                </div>
+                <div class="pbox hiddenLeft">
+                    <div class="portfolioImage"> <img src="Assets/mock-design-3.jpg" alt="Photo"></div>
+                    <div class="portfolioInfo">
+                        <p><span>Client: </span>FreshStart Wellness</p>
+                        <p><span>Industry: </span>Health & Wellness</p>
+                        <p><span>Services Provided: </span>Graphic Design, Branding, Logo Design</p>
+                    </div>
+                    <div class="portfolioDescription">
+                        <p>FreshStart Wellness came to us for a complete brand identity transformation. We crafted a fresh, vibrant logo and a cohesive branding strategy that resonates with their mission of promoting health and wellness. Our design team developed marketing materials, social media graphics, and a brand guide to ensure consistent application across all platforms. The new branding significantly improved their market positioning and customer recognition.</p>
+                    </div>
+                    <div class="buttonContainer">
+                        <button class="portButton">Check Me Out</button>
+                       </div>
+                </div>
+                <div class="pbox hiddenLeft">
+                    <div class="portfolioImage"> <img src="Assets/4.jpg" alt="Photo"></div>
+                    <div class="portfolioInfo">
+                        <p><span>Client: </span>TravelWorld Adventures</p>
+                        <p><span>Industry: </span>Travel & Tourism</p>
+                        <p><span>Services Provided: </span>Content Creation, Photography, Video Production</p>
+                    </div>
+                    <div class="portfolioDescription">
+                        <p>TravelWorld Adventures sought our expertise to create compelling content that captures the excitement of their travel experiences. We produced a series of engaging blog posts, high-quality photographs, and captivating videos that showcase their destinations and tours. This content strategy enhanced their online presence, leading to increased website engagement and a 25% rise in bookings.</p>
+                    </div>
+                    <div class="buttonContainer">
+                        <button class="portButton">Check Me Out</button>
+                       </div>
+                </div>
+            </div>
+        </div>
     </div>
     
     <div class="contact">
