Contact Areas Styled

--- a/index.html
+++ b/index.html
@@ -279,14 +279,69 @@
     </div>
     
     <div class="contact">
-
+        <div class="contactWrapper">
+            <div class="contactStart">
+                <h3>Contact Us</h3>
+                <p>Have a question or ready to get started on your project? <br> Fill out the form below, and we'll get back to you as soon as possible.</p>
+            </div>
+            <div class="contactContent">
+                <iframe class="map" src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d6291.442364914056!2d23.7038963888855!3d37.96029573791566!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x14a1bcf825aa86ed%3A0x4193783e3d2227f7!2sLaskaridou%2054%2C%20Kallithea%20176%2076!5e0!3m2!1sen!2sgr!4v1716039748731!5m2!1sen!2sgr" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>                
+                <form class="contactForm" action="">
+                    <h3>Send A Message</h3>
+                    <label for="text">name</label>
+                    <input type="text" required>
+                    <label for="email">Email</label>
+                    <input type="text">
+                    <label for="message">Message</label>
+                    <textarea name="message" id="" cols="4"></textarea>
+                    <input type="submit" id="submitButton" value="Send !" />
+                </form>
+            </div>
+            <div class="contactAddress">
+                <h3>Get In Touch</h3>
+                <p><img src="Assets/location.png" alt="addressIcon"> Address: Laskaridou 54, Kallithea 176 76
+                    , Athens 17676</p>
+                <p><img src="Assets/smartphone-call.png" alt="phoneIcon"> Phone: (+30) 694 369 4628</p>
+                <p><img src="Assets/mail.png" alt="emailIcon"> Email: emmanouil.filippas@gmail.com</p> 
+            </div>
+        </div>
     </div>
 
     <div class="links"> 
-
+        <div class="linkWrapper">
+            <div class="linkBox">
+                <div class="linkTitle"><h3>Quick Links</h3></div>
+                <div class="linkContent">
+                    <a href="">Home</a>
+                    <a href="">About Us</a>
+                    <a href="">Amenities</a>
+                    <a href="">Pricing</a>
+                    <a href="">Contact</a>
+                </div>
+            </div>
+            <div class="linkBox">
+                <div class="linkTitle"><h3>Important Links</h3></div>
+                <div class="linkContent">
+                    <a href="">Terms and Conditions</a>
+                    <a href="">Legal</a>
+                    <a href="">Business</a>
+                    <a href="">Partners</a>
+                </div>
+            </div>
+            <div class="linkBox">
+                <div class="linkTitle"><h3>Let's Connect</h3></div>
+                <div class="linkContent">
+                    <a href=""><img src="Assets/facebook.png" alt=""></a>
+                    <a href=""><img src="Assets/twitter-alt-circle.png" alt=""></a>
+                    <a href=""><img src="Assets/youtube.png" alt=""></a>
+                    <a href=""><img src="Assets/linkedin.png" alt=""></a>
+                </div>
+            </div>
+        </div>
     </div>
 
     <div class="footer">
+        <p>All rights reserved  &copy 2024 <span>Emmanouil Filippas</span></p>
 <!-- `       attribute for an image <a href="https://www.freepik.com/free-vector/site-template-messenger-online-chat_3266547.htm#page=15&query=digital%20agency%20isometric&position=6&from_view=keyword&track=ais_user_b&uuid=853f98e4-419d-45db-a7e2-77442ad66e01">Image by vectorpocket</a> on Freepik -->
     </div>
     <script src="script.js"></script>
