--- a/index.html
+++ b/index.html
@@ -278,7 +278,7 @@
         </div>
     </div>
     
-    <div class="contact">
+    <div class="contact ">
         <div class="contactWrapper">
             <div class="contactStart">
                 <h3>Contact Us</h3>
@@ -300,7 +300,7 @@
             <div class="contactAddress">
                 <h3>Get In Touch</h3>
                 <p><img src="Assets/location.png" alt="addressIcon"> Address: Laskaridou 54, Kallithea 176 76
-                    , Athens 17676</p>
+                    , Athens</p>
                 <p><img src="Assets/smartphone-call.png" alt="phoneIcon"> Phone: (+30) 694 369 4628</p>
                 <p><img src="Assets/mail.png" alt="emailIcon"> Email: emmanouil.filippas@gmail.com</p> 
             </div>
@@ -309,8 +309,8 @@
 
     <div class="links"> 
         <div class="linkWrapper">
-            <div class="linkBox">
-                <div class="linkTitle"><h3>Quick Links</h3></div>
+            <div class="linkBox hidden">
+                <div class="linkTitle"><p>Quick Links</p></div>
                 <div class="linkContent">
                     <a href="">Home</a>
                     <a href="">About Us</a>
@@ -319,8 +319,8 @@
                     <a href="">Contact</a>
                 </div>
             </div>
-            <div class="linkBox">
-                <div class="linkTitle"><h3>Important Links</h3></div>
+            <div class="linkBox hidden">
+                <div class="linkTitle"><p>Important Links</p></div>
                 <div class="linkContent">
                     <a href="">Terms and Conditions</a>
                     <a href="">Legal</a>
@@ -328,9 +328,9 @@
                     <a href="">Partners</a>
                 </div>
             </div>
-            <div class="linkBox">
-                <div class="linkTitle"><h3>Let's Connect</h3></div>
-                <div class="linkContent">
+            <div class="linkBox hidden">
+                <div class="linkTitle"><h3>Let's Connect</p></div>
+                <div class="linksContent">
                     <a href=""><img src="Assets/facebook.png" alt=""></a>
                     <a href=""><img src="Assets/twitter-alt-circle.png" alt=""></a>
                     <a href=""><img src="Assets/youtube.png" alt=""></a>
