--- a/index.html
+++ b/index.html
@@ -336,19 +336,19 @@
             <div class="linkBox hidden">
                 <div class="linkTitle"><p>Important Links</p></div>
                 <div class="linkContent">
-                    <a href="">Terms and Conditions</a>
-                    <a href="">Legal</a>
-                    <a href="">Business</a>
-                    <a href="">Partners</a>
+                    <a href="#">Terms and Conditions</a>
+                    <a href="#">Legal</a>
+                    <a href="#">Business</a>
+                    <a href="#">Partners</a>
                 </div>
             </div>
             <div class="linkBox hidden">
                 <div class="linkTitle"><h3>Let's Connect</p></div>
                 <div class="linksContent">
-                    <a href=""><img src="Assets/facebook.png" alt=""></a>
-                    <a href=""><img src="Assets/twitter-alt-circle.png" alt=""></a>
-                    <a href=""><img src="Assets/youtube.png" alt=""></a>
-                    <a href=""><img src="Assets/linkedin.png" alt=""></a>
+                    <a target="_blank" href="https://www.facebook.com/"><img src="Assets/facebook.png" alt=""></a>
+                    <a target="_blank" href="https://x.com/"><img src="Assets/twitter-alt-circle.png" alt=""></a>
+                    <a target="_blank" href="https://www.youtube.com/"><img src="Assets/youtube.png" alt=""></a>
+                    <a target="_blank" href="https://www.linkedin.com/"><img src="Assets/linkedin.png" alt=""></a>
                 </div>
             </div>
         </div>
